--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -12,6 +12,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	border-radius: 0;
+	padding: 20px;
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
 }
 
 .contact-form {
@@ -90,14 +93,20 @@ button {
 	margin-top: 20px;
 	border: 1px solid $color-main;
 	text-transform: uppercase;
+	width: 100%;
+	background-color: $color-red;
+	border: 1px solid $color-red;
+	color: $color-white;
+	padding: 15px;
+	font-weight: 450;
 
 	@include md-max {
 		font-size: 10px;
 	}
 
 	&:hover {
-		background-color: $color-red;
-		color: $color-white;
+		background-color: $color-white;
+		color: $color-red;
 		border: 1px solid $color-red;
 	}
 }
