--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -13,8 +13,11 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	border-radius: 0;
-	padding: 20px;
-	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+
+	@include md-min {
+		padding: 20px;
+		box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+	}
 }
 
 .contact-form {
