--- a/src/styles/offer.scss
+++ b/src/styles/offer.scss
@@ -15,6 +15,7 @@
 	justify-content: flex-start;
 	align-items: flex-start;
 	padding: 20px 0;
+	flex-wrap: wrap;
 
 	.checkbox-item {
 		display: flex;
@@ -22,11 +23,17 @@
 		justify-content: flex-start;
 		align-items: center;
 		margin-left: -4px;
+		margin: 5px 0;
+
+		@include md-min {
+			margin: 0;
+		}
 	}
 
 	@include md-min {
 		flex-direction: row;
 		gap: 20px;
+		padding: 30px 0;
 	}
 }
 
@@ -40,7 +47,9 @@ input[type='radio']:checked {
 }
 
 label {
-	font-size: 20px;
+	@include md-min {
+		font-size: 20px;
+	}
 }
 
 .label-checkbox {
@@ -52,9 +61,12 @@ label {
 }
 
 .contact-offer-form {
-	padding: 20px;
 	border-radius: 0;
-	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+
+	@include md-min {
+		padding: 20px;
+		box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+	}
 }
 
 .offer-form__button {
@@ -64,6 +76,13 @@ label {
 	color: $color-white;
 	padding: 15px;
 	font-weight: 450;
+
+	@include sm-min {
+		width: 60%;
+	}
+	@include lg-min {
+		width: 100%;
+	}
 
 	&:hover {
 		background-color: $color-white;
