--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -60,13 +60,14 @@
 	width: 100%;
 	padding: 10px 0;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 18px;
 	box-sizing: border-box;
 	border: none;
-
 	border-bottom: 1px solid $color-main;
 	color: black;
 
+	@include md-min {
+		font-size: 18px;
+	}
 	&::placeholder {
 		opacity: 0.7;
 	}
