--- a/src/styles/offer.scss
+++ b/src/styles/offer.scss
@@ -1,4 +1,5 @@
-.offer-title {
+.offer-text,
+.offer-subtext {
 	font-size: 16px;
 	@include content-width();
 	font-weight: 400;
@@ -7,6 +8,15 @@
 	@include md-min {
 		font-size: 22px;
 	}
+}
+
+.offer-text {
+	margin-bottom: 20px;
+}
+
+.offer-subtext {
+	margin-top: 0;
+	margin-bottom: 20px;
 }
 
 .checkbox-group {
@@ -78,7 +88,11 @@ label {
 	font-weight: 450;
 
 	@include sm-min {
-		width: 60%;
+		width: 30%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
 	}
 	@include lg-min {
 		width: 100%;
