--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -1,14 +1,16 @@
 .menu__logo {
 	display: block;
 	margin: 0 auto;
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url(../assets/images/logo/logo.png);
 	width: 130px;
-	height: 50px;
+	height: 60px;
 	background-position: center;
 
 	@include md-max {
 		background-position: left;
+		height: 40px;
+		background-size: contain;
 	}
 }
