--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -175,6 +175,12 @@
 .menu__link--footer {
 	font-size: 12px;
 	display: inline-block;
+	padding: 5px;
+	width: 100%;
+
+	@include md-min {
+		padding: 3px;
+	}
 }
 
 .menu-contact {
